# media_hoster

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20221022190301_initial.sql
src/: auth.rs  main.rs  media.rs  model.rs  panel.rs  users.rs  util.rs  validation.rs
test/: output.webm
